<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="t1">1</string>
    <string name="t2"> 2/ABC</string>
    <string name="t3"> 3/DEF</string>
    <string name="t4">4/GHI</string>
    <string name="t5">5/JKL </string>
    <string name="t6"> 6/MNO</string>
    <string name="t7">7/PQRS</string>
    <string name="t8">8/TUV</string>
    <string name="t9">9/WXYZ</string>
    <string name="t11">*</string>
    <string name="t10">0/+</string>
    <string name="t12">rebuild</string>
    <string name="t13">del</string>
    <string name="app_name">LuceneOnAndroid</string>
</resources>
